syntax = "proto3";

package proconnectx;
import "google/protobuf/timestamp.proto";

service ProConnectX {
    rpc Register(RegistrationRequest) returns (RegistrationResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc SetProfile(ProfileRequest) returns (ProfileResponse);
    rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
    rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
}

message RegistrationRequest {
    string username = 1;
    string password = 2;
}

message RegistrationResponse {
    bool success = 1;
    string message = 2;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
    string message = 2;
    int32 user_id = 3;
}

message ProfileRequest {
    int32 user_id = 1;
    string profile_data = 2;
}

message ProfileResponse {
    bool success = 1;
    string message = 2;
}

message GetProfileRequest {
    int32 user_id = 1;
}

message GetProfileResponse {
    bool success = 1;
    string profile_data = 2;
    string message = 3;
}

message UpdateProfileRequest {
    int32 user_id = 1;
    string updated_data = 2;
}

message UpdateProfileResponse {
    bool success = 1;
    string message = 2;
}
